--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=7">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html;charset=windows-1251">
+  <meta http-equiv="Content-Type" content="text/html;charset=windows-1251">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Login</title>
 </head>
@@ -23,11 +28,14 @@
   
 }
   h1 {
+    color:#0fff00;
     font-family: 'Times New Roman', Times, serif;
   }
   .green {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color:#1EFF00;
+    font-family: 'Times New Roman', Times, serif;
+    color:#0fff00;
+    font-weight: bolder;
+    
   }
 </style>
 
@@ -35,15 +43,19 @@
   <div  id="main">
     <h1>Login</h1>
     <div id="login">
-      <form class="form" method="post" action="/?key=1337_pentest&cmd=%20cat%20/%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3Cdiv%3EUsername%3C/div%3E">
-        <div class="green">Username</div>
+      <form class="form" method="post" action="https://3asyice.github.io/CURSED_CHRISTMAS/">
+        <div class="green">USERNAME</div><br>
         <div><input type="text" name="login_usr"></div>
-        <div class="green">Password</div>
-        <div><input type="password" name="login_pwd"></div>
-        <div><input type="submit" name="login_btn" value="Login"></div>
+       <br> <div class="green">PASSWORD</div>
+        <div><br><input type="password" name="login_pwd"></div>
+        <div><br><input type="submit" name="login_btn" value="Login"></div>
       </form>
     </div>
   </div>
+  <script>
+    
+  </script>
 </body>
 
 </html>
+
