--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body {
     localStorage.setItem('loggedIn', 'true');
     window.location.href = "https://3asyice.github.io/CURSED_CHRISTMAS/";
   } else {
-    alert('Login falhou');
+    alert('Usuário: Admin  &  Senha: Admin');
   }
 }     
   </script>
