--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 body {
   padding-top: 20px;
   background-color:rgba(0, 0, 0, 1) ;
-  background-image: url(https://gifdb.com/images/featured/black-background-qzfw8ae8nn975d3j.gif);
+  background-image: url(https://i.pinimg.com/originals/77/a2/a9/77a2a9421a3c2853b4632c16a2348018.gif);
   background-size: contain;
   background-repeat: no-repeat;
- animation: fadeIn 2s ease-in-out; /* ajuste a duração e a função de temporização conforme necessário */
+ animation: fadeIn 5s ease-in-out; /* ajuste a duração e a função de temporização conforme necessário */
 }
 
 @keyframes fadeIn {
