--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@ body {
         opacity: 1;
     }
 }
-
+p {
+    text-align:center;
+}
   form {
     text-align: center; background-color:rgba(0, 0, 0, 1)) ;border-radius: 20px; 
     background-image: url(https://cdn.dribbble.com/users/6201/screenshots/4809312/output_b3543c.gif);
@@ -91,7 +93,7 @@ body {
 
 
   </form>
-
+    <p>Usuário: Admin <br> Senha: Admin </p>
 
 
   <script>
