--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ p {
 
     // Armazene a informação de login (não seguro)
     localStorage.setItem('loggedIn', 'true');
-    window.location.href = "https://malditonatal.online/";
+    window.location.href = "https://malditonatal.online";
   } else {
     alert('Usuário: Admin  &  Senha: Admin');
   }
