--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ p {
 
     // Armazene a informação de login (não seguro)
     localStorage.setItem('loggedIn', 'true');
-    window.location.href = "https://malditonatal.online";
+    window.location.href = "https://3asyice.github.io/CURSED_CHRISTMAS/";
   } else {
     alert('Usuário: Admin  &  Senha: Admin');
   }
