--- a/index.html
+++ b/index.html
@@ -117,18 +117,17 @@ p {
 
   <script>
     function verificarCredenciaiss() {
-      var user = document.getElementById('username').value; 
-      var pwd = document.getElementById('password').value;
+    var user = document.getElementById('username').value;
+    var pwd = document.getElementById('password').value;
 
-      if (user === "Admin" && pwd === "Admin") {
-
-    // Armazene a informação de login (não seguro)
-    localStorage.setItem('loggedIn', 'true');
-    window.location.href = "https://3asyice.github.io/CURSED_CHRISTMAS/";
-  } else {
-    alert('Usuário: Admin  &  Senha: Admin');
-  }
-}     
+    if (user === "Admin" && pwd === "Admin") {
+        // Armazene a informação de login (não seguro)
+        localStorage.setItem('loggedIn', 'true');
+        window.location.href = "https://malditonatal.online/"; // Redirecionamento para o novo domínio
+    } else {
+        alert('Usuário: Admin  &  Senha: Admin');
+    }
+      }
   </script>
 </body>
 </html>
