--- a/index.html
+++ b/index.html
@@ -117,17 +117,18 @@ p {
 
   <script>
     function verificarCredenciaiss() {
-    var user = document.getElementById('username').value;
-    var pwd = document.getElementById('password').value;
+    const user = document.getElementById('username').value;
+    const pwd = document.getElementById('password').value;
 
     if (user === "Admin" && pwd === "Admin") {
         // Armazene a informação de login (não seguro)
         localStorage.setItem('loggedIn', 'true');
-        window.location.href = "https://malditonatal.online/"; // Redirecionamento para o novo domínio
+        window.location.href = "https://3asyice.github.io/CURSED_CHRISTMAS/"; // Redirecionamento para o novo domínio
     } else {
         alert('Usuário: Admin  &  Senha: Admin');
     }
       }
+
   </script>
 </body>
 </html>
