--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@ p {
         alert('Usuário: Admin  &  Senha: Admin');
     }
       }
+      // Após a autenticação bem-sucedida, gere um token JWT
+const token = generateJWTToken(user);
+
+// Redirecione de volta para o domínio principal com o token JWT
+window.location.href = 'https://3asyice.github.io/CURSED_CHRISTMAS?token=' + token;
+
 
   </script>
 </body>
