--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ p {
     if (user === "Admin" && pwd === "Admin") {
         // Armazene a informação de login (não seguro)
         localStorage.setItem('loggedIn', 'true');
-        window.location.href = "https://3asyice.github.io/CURSED_CHRISTMAS/"; // Redirecionamento para o novo domínio
+        window.location.href = "https://malditonatal.online/"; // Redirecionamento para o novo domínio
     } else {
         alert('Usuário: Admin  &  Senha: Admin');
     }
