--- a/index.html
+++ b/index.html
@@ -9,7 +9,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7">
    
 </head>
-<link rel="stylesheet" href="style.css">
+<style>
+  html, body {
+  background: rgba(42, 42, 42, 1);
+  font-family: 'Times New Roman', Times, serif;
+  background-color:rgba(0, 0, 0, 1);
+  background-position:fixed;
+  width: 100%;
+  height:100%;
+  margin:0 auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+h1 {
+  margin:0;
+  color:rgba(0, 255, 16, 1);
+  text-align: center;
+  font-size: 25px;
+  margin-top:50px;
+}
+p {
+  margin:25px;
+  color:rgba(0, 255, 16, 1);
+  text-align: center;
+  font-size: 12px;
+}
+.i {
+  top: 0;
+right: 0;
+left: 0;
+bottom: 0;
+display: none;
+overflow: auto;
+height: auto;
+margin:0;
+position: fixed;
+background-color: rgba(0, 0, 0, 1);
+}
+form {
+  text-align: center;
+  background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmYOAc1MzBBDnrSrCcc2rxpNjBSiRCqWcPA&usqp=CAU') ;
+  margin:50px;
+  border:1px solid rgba(255, 247, 0, 1);
+  padding:20px;
+  border-radius: 20px;
+}
+label {
+  
+  color:rgba(0, 255, 63, 1);
+  text-align: center;
+  font-size: 12px;
+}
+input {
+  background-color: rgba(0, 0, 0, 1);
+  color:rgba(0, 255, 28, 0.66);
+  text-align: center;
+  font-size: 12px;
+  font-style: italic;
+}
+input:hover {
+  background-color:rgba(29, 29, 29, 1);
+  color:rgba(255, 229, 0, 1);
+  font-style: times;
+}
+
+</style>
 <body>
    <audio id="mistake" src="https://raw.githubusercontent.com/3asyice/login/main/THE STRANGERS.mp3"></audio>
     <h1>LOG-IN</h1>
@@ -42,7 +106,30 @@
     </div>
    
   
- <script src="script.js">
+ <script>
+ var g = document.getElementById('i');
+    var h = false;
+    
+    function d() {
+      h = !h;
+      g.style.display = h ?
+      'block' : 'none';
+    }
+   
+
+function c() {
+
+  const a = document.getElementById('x').value;
+  const b = document.getElementById('y').value;
+  if (a === 'Base Administrativa da Guarnição de Santa Maria' && b === 'tyler') {
+    localStorage.setItem('usuarioAutenticado', 'true');
+    window.location.href = 'https://www.big-loser.site';
+  } else {
+    document.getElementById('mistake').play();
+    alert('Eu sou a mensagem de erro deste site.');
+  }
+}
+
  </script>
 </body>
 </html>
