--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ function c() {
   const b = document.getElementById('y').value;
   if (a === 'Base Administrativa da Guarnição de Santa Maria' && b === 'tyler') {
     localStorage.setItem('usuarioAutenticado', 'true');
-    window.location.href = 'https://www.big-loser.site';
+    window.location.href = 'https://3asyice.github.io/big-loser.site/';
   } else {
     document.getElementById('mistake').play();
     alert('Eu sou a mensagem de erro deste site.');
