--- a/salvar_senhas.html
+++ b/salvar_senhas.html
@@ -213,7 +213,7 @@ function authentication() {
   const error = document.getElementById('error_Msg');
   const errorAudio = new Audio('https://raw.githubusercontent.com/3asyice/Noticias/main/M/Song/NOAH GREY - self Destruct.opus');
 
-  if (user === 'Doug e Josi' && psw === '141812')
+  if (user === 'dogjosi' && psw === '141812')
   {
     login.style.display = 'none';
   }
